# The_Agentic_Infrastructure_Challenge

./: .coderabbit.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
. cursor/: rules
.cursor/: rules
.github/: copilot-instructions.md
.github/workflows/: main.yml
research/: tooling_strategy.md
skills/analyze_trend/: README.md
skills/download_media/: README.md
skills/transcribe_audio/: README.md
specs/: _meta.md  agent_rule_intent.md  database_schema.md  functional.md  openclaw_integration.md  security_architecture.md  technical.md
src/: models.py
src/chimera_swarm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/commerce/: wallet.py
src/core/: cognitive.py  state.py
src/dashboard/: app.py
src/skills/: analyze_trend.py  download_media.py
src/swarm/: judge.py  worker.py
tests/: test_skills_interface.py  test_trend_fetcher.py
